--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@
             <img src="img/oregon-coast.JPG" alt="">
             <h3>Travel <span>Planet possible</span></h3>
         </div>
+        <div class="pick-item-1">
+            <img src="img/questlove.jpg" alt="">
+            <h3>history & culture <span>Race in America</span></h3>
+        </div>
+        <div class="pick-item-2">
+            <img src="img/war-in-Ukraine.jpg" alt="">
+            <h3>environment <span>War in Ukraine could plunge world into food shortages</span></h3>
+        </div>
+        <div class="pick-item-3">
+            <img src="img/snake.jpg" alt="">
+            <h3>animals <span>Can snakes recognize themselves? A controversial study says yes</span></h3>
+        </div>
+        <div class="pick-item-4">
+            <img src="img/renaissance-female-superstar.jpg" alt="">
+            <h3>history magazine <span>This artist became the first female Renaissance superstar</span></h3>
+        </div>
+        <div class="pick-item-5">
+            <img src="img/wildlife.jpg" alt="">
+            <h3>environment <span>Is clear-cutting U.S. forests good for wildlife?</span></h3>
+        </div>
     </section>
 </body>
 </html>
