--- a/test.html
+++ b/test.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+    <form>
+        <div>
+            <label>First Name</label>
+            <input type="text" id="txtFirstName" class="form-control" placeholder="Add your Name"
+        </div>
+        <div>
+            <label>Age</label>
+            <input type="number" id="txtage" placeholder="Add your age"
+        </div>
+        <div>
+            <label>Password</label>
+            <input type="password" id="txtPassword" placeholder="Enter a password"
+        </div>
+        <div>
+            <label>Color</label>
+            <input type="color"
+        </div>
+    </form>
     
 </body>
 </html>
