--- a/test.html
+++ b/test.html
@@ -4,27 +4,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="test.css">
+    <title>Practice</title>
 </head>
 <body>
     <form>
         <div>
             <label>First Name</label>
-            <input type="text" id="txtFirstName" class="form-control" placeholder="Add your Name"
+            <br>
+            <input type="text" id="txtFirstName" class="form-control" placeholder="Add your Name">
         </div>
         <div>
             <label>Age</label>
-            <input type="number" id="txtage" placeholder="Add your age"
+            <input type="number" id="txtage" placeholder="Add your age">
         </div>
         <div>
             <label>Password</label>
-            <input type="password" id="txtPassword" placeholder="Enter a password"
+            <input type="password" id="txtPassword" placeholder="Enter a password">
         </div>
         <div>
             <label>Color</label>
-            <input type="color"
+            <input type="color">
         </div>
     </form>
+    <table class="table">
+        <tr>
+            <th>header 1</th>
+            <th>header 2</th>
+            <th>header 3</th>
+        </tr>
+        <tr>
+            <td>data 1</td>
+            <td>data 2</td>
+            <td>data 3</td>
+        </tr>
+        <tr>
+            <td>data 4</td>
+            <td>data 5</td>
+            <td>date 6</td>
+        </tr>
+        <tr>
+            <td>data 7</td>
+            <td>data 8</td>
+            <td>date 10</td>
+        </tr>
+        <tr>
+            <td>data 11</td>
+            <td>data 12</td>
+            <td>date 13</td>
+        </tr>
+    </table>
+    <h2>Flex Box</h2>
+        <div class="flex-container">
+            <div class="flex-child">
+                A
+            </div>
+            <div class="flex-child">
+                B
+            </div>
+            <div class="flex-child">
+                C
+            </div>
+        </div>
+    <h2>Grid</h2>
+        <div class="grid-container">
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+            <div class="grid-child">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum ducimus sequi, magnam molestiae molestias fugit ex fugiat suscipit nam porro accusantium nemo maxime, eligendi beatae! Tempore repellat ratione pariatur itaque.
+            </div>
+        </div>
     
 </body>
 </html>
